--- a/css/styles.css
+++ b/css/styles.css
@@ -82,3 +82,27 @@ p {
   bottom: 0;
   position: absolute;
 }
+.hero-content {
+  position: relative;
+  z-index: 1;
+  flex: 1;
+  padding-bottom: 2em;
+  color: var(--white);
+  text-align: center;
+}
+.hero-content i {
+  font-size: 2.5em;
+  color: var(--primary);
+}
+.button {
+  background-color: var(--secondary);
+  padding: 1em 3em;
+  border-radius: 0.3em;
+  display: inline-block;
+  color: var(--white);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.2em;
+  font-weight: 700;
+  border: none;
+}
