--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,12 @@ h3 {
 h3 {
   color: var(--secondary);
   font-weight: 400;
-  font-size: 1.5em;
+  font-size: 1.2em;
+}
+@media (min-width: 900px) {
+  h3 {
+    font-size: 1.5em;
+  }
 }
 p {
   line-height: 2;
@@ -156,4 +161,65 @@ form {
   border-radius: 0.6em;
 }
 form legend {
+  text-align: center;
+  font-size: 1.2em;
+  color: var(--primary);
+  margin-bottom: 1em;
+}
+.fields {
+  display: flex;
+  flex-direction: column;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  form {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+  form legend {
+    margin-bottom: 2em;
+  }
+  .fields {
+    display: flex;
+    justify-content: space-between;
+    /* Todos los elementos de fields se convierten en un solo
+    elemento flex */
+    flex-wrap: wrap;
+  }
+  .field {
+    flex-direction: row;
+    flex: 0 0 calc(50% - 1em);
+  }
+  .field label {
+    flex: 0 0 6em;
+  }
+}
+.field label {
+  color: var(--white);
+}
+.field input[type="text"],
+.field input[type="mail"],
+.field textarea {
+  flex: 1;
+  height: 2em;
+}
+.width-100 {
+  flex: 0 0 100%;
+}
+.field textarea {
+  height: 4em;
+}
+.send {
+  display: flex;
+  justify-content: center;
+}
+@media (min-width: 768px) {
+  .send {
+    justify-content: flex-end;
+  }
 }
